--- a/styles.css
+++ b/styles.css
@@ -159,7 +159,9 @@ button {
     background-color: #303B59;
 }
 
-
+button:hover {
+    background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
+}
 
 @media screen and (min-width: 768px) {
 
